<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mains"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">


    <EditText
        android:id="@+id/editText5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edtx"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="89dp"
        tools:layout_editor_absoluteY="49dp" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edta"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="110dp" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edtemail"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="186dp" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edtcel"
        android:inputType="phone"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="252dp" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="231dp"
        android:layout_height="36dp"
        android:checked="true"
        android:hint="@string/edtswitch"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="319dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edtbotton"
        tools:layout_editor_absoluteX="289dp"
        tools:layout_editor_absoluteY="319dp" />
</androidx.constraintlayout.widget.ConstraintLayout>